twilio/rest/studio/v1/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.10.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DefaultApi* | [**CreateEngagement**](docs/DefaultApi.md#createengagement) | **Post** /v1/Flows/{FlowSid}/Engagements | 
*DefaultApi* | [**CreateExecution**](docs/DefaultApi.md#createexecution) | **Post** /v1/Flows/{FlowSid}/Executions | 
*DefaultApi* | [**DeleteEngagement**](docs/DefaultApi.md#deleteengagement) | **Delete** /v1/Flows/{FlowSid}/Engagements/{Sid} | 
*DefaultApi* | [**DeleteExecution**](docs/DefaultApi.md#deleteexecution) | **Delete** /v1/Flows/{FlowSid}/Executions/{Sid} | 
*DefaultApi* | [**DeleteFlow**](docs/DefaultApi.md#deleteflow) | **Delete** /v1/Flows/{Sid} | 
*DefaultApi* | [**FetchEngagement**](docs/DefaultApi.md#fetchengagement) | **Get** /v1/Flows/{FlowSid}/Engagements/{Sid} | 
*DefaultApi* | [**FetchEngagementContext**](docs/DefaultApi.md#fetchengagementcontext) | **Get** /v1/Flows/{FlowSid}/Engagements/{EngagementSid}/Context | 
*DefaultApi* | [**FetchExecution**](docs/DefaultApi.md#fetchexecution) | **Get** /v1/Flows/{FlowSid}/Executions/{Sid} | 
*DefaultApi* | [**FetchExecutionContext**](docs/DefaultApi.md#fetchexecutioncontext) | **Get** /v1/Flows/{FlowSid}/Executions/{ExecutionSid}/Context | 
*DefaultApi* | [**FetchExecutionStep**](docs/DefaultApi.md#fetchexecutionstep) | **Get** /v1/Flows/{FlowSid}/Executions/{ExecutionSid}/Steps/{Sid} | 
*DefaultApi* | [**FetchExecutionStepContext**](docs/DefaultApi.md#fetchexecutionstepcontext) | **Get** /v1/Flows/{FlowSid}/Executions/{ExecutionSid}/Steps/{StepSid}/Context | 
*DefaultApi* | [**FetchFlow**](docs/DefaultApi.md#fetchflow) | **Get** /v1/Flows/{Sid} | 
*DefaultApi* | [**FetchStep**](docs/DefaultApi.md#fetchstep) | **Get** /v1/Flows/{FlowSid}/Engagements/{EngagementSid}/Steps/{Sid} | 
*DefaultApi* | [**FetchStepContext**](docs/DefaultApi.md#fetchstepcontext) | **Get** /v1/Flows/{FlowSid}/Engagements/{EngagementSid}/Steps/{StepSid}/Context | 
*DefaultApi* | [**ListEngagement**](docs/DefaultApi.md#listengagement) | **Get** /v1/Flows/{FlowSid}/Engagements | 
*DefaultApi* | [**ListExecution**](docs/DefaultApi.md#listexecution) | **Get** /v1/Flows/{FlowSid}/Executions | 
*DefaultApi* | [**ListExecutionStep**](docs/DefaultApi.md#listexecutionstep) | **Get** /v1/Flows/{FlowSid}/Executions/{ExecutionSid}/Steps | 
*DefaultApi* | [**ListFlow**](docs/DefaultApi.md#listflow) | **Get** /v1/Flows | 
*DefaultApi* | [**ListStep**](docs/DefaultApi.md#liststep) | **Get** /v1/Flows/{FlowSid}/Engagements/{EngagementSid}/Steps | 
*DefaultApi* | [**UpdateExecution**](docs/DefaultApi.md#updateexecution) | **Post** /v1/Flows/{FlowSid}/Executions/{Sid} | 


## Documentation For Models

 - [CreateEngagementRequest](docs/CreateEngagementRequest.md)
 - [CreateExecutionRequest](docs/CreateExecutionRequest.md)
 - [EngagementStatus](docs/EngagementStatus.md)
 - [ExecutionStatus](docs/ExecutionStatus.md)
 - [FlowStatus](docs/FlowStatus.md)
 - [ListEngagementResponse](docs/ListEngagementResponse.md)
 - [ListExecutionResponse](docs/ListExecutionResponse.md)
 - [ListExecutionStepResponse](docs/ListExecutionStepResponse.md)
 - [ListFlowResponse](docs/ListFlowResponse.md)
 - [ListFlowResponseMeta](docs/ListFlowResponseMeta.md)
 - [ListStepResponse](docs/ListStepResponse.md)
 - [StudioV1Flow](docs/StudioV1Flow.md)
 - [StudioV1FlowEngagement](docs/StudioV1FlowEngagement.md)
 - [StudioV1FlowEngagementEngagementContext](docs/StudioV1FlowEngagementEngagementContext.md)
 - [StudioV1FlowEngagementStep](docs/StudioV1FlowEngagementStep.md)
 - [StudioV1FlowEngagementStepStepContext](docs/StudioV1FlowEngagementStepStepContext.md)
 - [StudioV1FlowExecution](docs/StudioV1FlowExecution.md)
 - [StudioV1FlowExecutionExecutionContext](docs/StudioV1FlowExecutionExecutionContext.md)
 - [StudioV1FlowExecutionExecutionStep](docs/StudioV1FlowExecutionExecutionStep.md)
 - [StudioV1FlowExecutionExecutionStepExecutionStepContext](docs/StudioV1FlowExecutionExecutionStepExecutionStepContext.md)
 - [UpdateExecutionRequest](docs/UpdateExecutionRequest.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```


## Author

support@twilio.com

