twilio/rest/studio/v2/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project from the OpenAPI specs located at [twilio/twilio-oai](https://github.com/twilio/twilio-oai/tree/main/spec).  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 1.10.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DefaultApi* | [**CreateExecution**](docs/DefaultApi.md#createexecution) | **Post** /v2/Flows/{FlowSid}/Executions | 
*DefaultApi* | [**CreateFlow**](docs/DefaultApi.md#createflow) | **Post** /v2/Flows | 
*DefaultApi* | [**DeleteExecution**](docs/DefaultApi.md#deleteexecution) | **Delete** /v2/Flows/{FlowSid}/Executions/{Sid} | 
*DefaultApi* | [**DeleteFlow**](docs/DefaultApi.md#deleteflow) | **Delete** /v2/Flows/{Sid} | 
*DefaultApi* | [**FetchExecution**](docs/DefaultApi.md#fetchexecution) | **Get** /v2/Flows/{FlowSid}/Executions/{Sid} | 
*DefaultApi* | [**FetchExecutionContext**](docs/DefaultApi.md#fetchexecutioncontext) | **Get** /v2/Flows/{FlowSid}/Executions/{ExecutionSid}/Context | 
*DefaultApi* | [**FetchExecutionStep**](docs/DefaultApi.md#fetchexecutionstep) | **Get** /v2/Flows/{FlowSid}/Executions/{ExecutionSid}/Steps/{Sid} | 
*DefaultApi* | [**FetchExecutionStepContext**](docs/DefaultApi.md#fetchexecutionstepcontext) | **Get** /v2/Flows/{FlowSid}/Executions/{ExecutionSid}/Steps/{StepSid}/Context | 
*DefaultApi* | [**FetchFlow**](docs/DefaultApi.md#fetchflow) | **Get** /v2/Flows/{Sid} | 
*DefaultApi* | [**FetchFlowRevision**](docs/DefaultApi.md#fetchflowrevision) | **Get** /v2/Flows/{Sid}/Revisions/{Revision} | 
*DefaultApi* | [**FetchTestUser**](docs/DefaultApi.md#fetchtestuser) | **Get** /v2/Flows/{Sid}/TestUsers | 
*DefaultApi* | [**ListExecution**](docs/DefaultApi.md#listexecution) | **Get** /v2/Flows/{FlowSid}/Executions | 
*DefaultApi* | [**ListExecutionStep**](docs/DefaultApi.md#listexecutionstep) | **Get** /v2/Flows/{FlowSid}/Executions/{ExecutionSid}/Steps | 
*DefaultApi* | [**ListFlow**](docs/DefaultApi.md#listflow) | **Get** /v2/Flows | 
*DefaultApi* | [**ListFlowRevision**](docs/DefaultApi.md#listflowrevision) | **Get** /v2/Flows/{Sid}/Revisions | 
*DefaultApi* | [**UpdateExecution**](docs/DefaultApi.md#updateexecution) | **Post** /v2/Flows/{FlowSid}/Executions/{Sid} | 
*DefaultApi* | [**UpdateFlow**](docs/DefaultApi.md#updateflow) | **Post** /v2/Flows/{Sid} | 
*DefaultApi* | [**UpdateFlowValidate**](docs/DefaultApi.md#updateflowvalidate) | **Post** /v2/Flows/Validate | 
*DefaultApi* | [**UpdateTestUser**](docs/DefaultApi.md#updatetestuser) | **Post** /v2/Flows/{Sid}/TestUsers | 


## Documentation For Models

 - [CreateExecutionRequest](docs/CreateExecutionRequest.md)
 - [CreateFlowRequest](docs/CreateFlowRequest.md)
 - [ExecutionStatus](docs/ExecutionStatus.md)
 - [FlowRevisionStatus](docs/FlowRevisionStatus.md)
 - [FlowStatus](docs/FlowStatus.md)
 - [ListExecutionResponse](docs/ListExecutionResponse.md)
 - [ListExecutionStepResponse](docs/ListExecutionStepResponse.md)
 - [ListFlowResponse](docs/ListFlowResponse.md)
 - [ListFlowResponseMeta](docs/ListFlowResponseMeta.md)
 - [ListFlowRevisionResponse](docs/ListFlowRevisionResponse.md)
 - [StudioV2Flow](docs/StudioV2Flow.md)
 - [StudioV2FlowExecution](docs/StudioV2FlowExecution.md)
 - [StudioV2FlowExecutionExecutionContext](docs/StudioV2FlowExecutionExecutionContext.md)
 - [StudioV2FlowExecutionExecutionStep](docs/StudioV2FlowExecutionExecutionStep.md)
 - [StudioV2FlowExecutionExecutionStepExecutionStepContext](docs/StudioV2FlowExecutionExecutionStepExecutionStepContext.md)
 - [StudioV2FlowFlowRevision](docs/StudioV2FlowFlowRevision.md)
 - [StudioV2FlowTestUser](docs/StudioV2FlowTestUser.md)
 - [StudioV2FlowValidate](docs/StudioV2FlowValidate.md)
 - [UpdateExecutionRequest](docs/UpdateExecutionRequest.md)
 - [UpdateFlowRequest](docs/UpdateFlowRequest.md)
 - [UpdateFlowValidateRequest](docs/UpdateFlowValidateRequest.md)
 - [UpdateTestUserRequest](docs/UpdateTestUserRequest.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```


## Author

support@twilio.com

